# nexcore-cytokine

./: CLAUDE.md  Cargo.toml  README.md
src/: apoptosis.rs  brain_bridge.rs  bus.rs  cascade.rs  chemotaxis.rs  composites.rs  differentiation.rs  emitter.rs  endocytosis.rs  exocytosis.rs  grounding.rs  lib.rs  mitosis.rs  neurotransmitter.rs  nmd.rs  phagocytosis.rs  prelude.rs  primitives.rs  pv_bridge.rs  quorum.rs  receptor.rs  transfer.rs  types.rs
